--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cubixcraft",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tathya551.github.io/r7hwmVCJvi2LCwZv/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
